# PersonalShoppingAssistant

./: .gitignore  .sample.env  README.md  client.py  pyproject.toml
src/backend/: __main__.py
src/backend/sites/: __main__.py
src/backend/uagent/: __init__.py  __main__.py
