[tool.poetry]
name = "personalshoppingassistant"
version = "0.1.0"
description = ""
authors = ["rex69420 <mridu674385@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." },
]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
